@@ -1,6 +1,7 @@
 2012-02-11
  * finished new guide.py
  * S, waitidle script commands
+ * --without-on-power for Zelio domes
 
 2012-02-02
  * center calculations
